--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>联信资匿名意见箱</title>
+  <title>📧 联信资匿名意见箱</title>
   <script src="https://cdn.jsdelivr.net/npm/emailjs-com@3/dist/email.min.js"></script>
   <style>
     body {
@@ -18,31 +18,61 @@
     .container {
       background-color: #fff;
       padding: 30px;
-      border-radius: 12px;
-      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+      border-radius: 16px;
+      box-shadow: 0 8px 20px rgba(0, 0, 0, 0.1);
       width: 100%;
-      max-width: 500px;
+      max-width: 520px;
+      animation: fadeIn 0.8s ease;
+    }
+    @keyframes fadeIn {
+      from {opacity: 0; transform: translateY(10px);}
+      to {opacity: 1; transform: translateY(0);}
     }
     h2 {
       text-align: center;
       color: #007bff;
       margin-bottom: 20px;
+      font-size: 24px;
     }
     label {
       font-weight: bold;
       margin-top: 10px;
       display: block;
     }
-    select, textarea, input[type="file"] {
+    select, textarea {
       width: 100%;
       padding: 10px;
       border: 1px solid #ccc;
       border-radius: 6px;
       margin-top: 5px;
+      font-size: 14px;
     }
     textarea {
       resize: none;
       height: 120px;
+    }
+    /* 上传按钮美化 */
+    .upload-btn {
+      display: inline-block;
+      background-color: #f0f4ff;
+      border: 2px dashed #007bff;
+      border-radius: 8px;
+      color: #007bff;
+      padding: 12px;
+      text-align: center;
+      cursor: pointer;
+      font-weight: bold;
+      transition: all 0.3s ease;
+      margin-top: 8px;
+      width: 100%;
+    }
+    .upload-btn:hover {
+      background-color: #007bff;
+      color: #fff;
+      border-style: solid;
+    }
+    input[type="file"] {
+      display: none;
     }
     button {
       width: 100%;
@@ -54,6 +84,7 @@
       border-radius: 6px;
       cursor: pointer;
       margin-top: 15px;
+      transition: background-color 0.3s;
     }
     button:hover {
       background-color: #0056b3;
@@ -62,9 +93,9 @@
 </head>
 <body>
   <div class="container">
-    <h2>联信资匿名意见箱</h2>
+    <h2>📧 联信资匿名意见箱</h2>
     <form id="feedbackForm">
-      <label for="category">举报内容分类：</label>
+      <label for="category">意见内容分类：</label>
       <select id="category" required>
         <option value="公司管理">公司管理</option>
         <option value="团队协作">团队协作</option>
@@ -74,9 +105,10 @@
       </select>
 
       <label for="message">意见内容：</label>
-      <textarea id="message" placeholder="请输入您的意见或建议..." required></textarea>
+      <textarea id="message" placeholder="请输入您宝贵的意见及建议，我们会及时进行整改和查证处理" required></textarea>
 
       <label for="image">上传图片（可选）：</label>
+      <label for="image" class="upload-btn">📷 点击选择图片</label>
       <input type="file" id="image" accept="image/*">
 
       <button type="submit">提交匿名意见</button>
@@ -85,7 +117,7 @@
 
   <script>
     (function() {
-      emailjs.init('Vf3g58_uwsuIfMxCI'); // 你的 EmailJS 公钥
+      emailjs.init('Vf3g58_uwsuIfMxCI');
     })();
 
     document.getElementById('feedbackForm').addEventListener('submit', async function(event) {
@@ -102,7 +134,6 @@
         return;
       }
 
-      // 如果有图片，则上传到 imgbb 匿名图床
       if (imageInput.files.length > 0) {
         const file = imageInput.files[0];
         if (file.size > 10 * 1024 * 1024) {
@@ -120,8 +151,6 @@
           const uploadData = await uploadRes.json();
           if (uploadData.data && uploadData.data.url) {
             imageLink = uploadData.data.url;
-          } else {
-            console.error('上传失败：', uploadData);
           }
         } catch (err) {
           console.error('图片上传失败：', err);
@@ -149,4 +178,5 @@
   </script>
 </body>
 </html>
+
 
