--- a/index.html
+++ b/index.html
@@ -1,107 +1,111 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>📧 联信资匿名意见箱 📧</title>
   <script src="https://cdn.jsdelivr.net/npm/emailjs-com@3/dist/email.min.js"></script>
   <style>
     body {
       font-family: 'Microsoft YaHei', Arial, sans-serif;
-      background-color: #f4f6f8;
+      margin: 0;
+      min-height: 100vh;
+      background: linear-gradient(135deg, #6fa3ef, #b693f9);
       display: flex;
       justify-content: center;
       align-items: center;
-      min-height: 100vh;
-      margin: 0;
-      padding: 20px;
+      padding: 15px;
     }
     .container {
-      background-color: #fff;
-      padding: 30px 25px;
-      border-radius: 16px;
-      box-shadow: 0 8px 20px rgba(0, 0, 0, 0.08);
+      background: rgba(255, 255, 255, 0.9);
+      backdrop-filter: blur(10px);
+      border-radius: 20px;
+      box-shadow: 0 8px 25px rgba(0, 0, 0, 0.15);
+      padding: 25px 25px 30px;
+      max-width: 500px;
       width: 100%;
-      max-width: 600px;
       animation: fadeIn 0.8s ease;
     }
     @keyframes fadeIn {
-      from {opacity: 0; transform: translateY(10px);}
+      from {opacity: 0; transform: translateY(15px);}
       to {opacity: 1; transform: translateY(0);}
     }
     h2 {
       text-align: center;
       color: #007bff;
-      margin-bottom: 25px;
-      font-size: 30px;
-      letter-spacing: 1px;
+      margin-bottom: 15px;
+      font-size: 28px;
       font-weight: 700;
+      letter-spacing: 0.5px;
     }
     label {
-      font-weight: bold;
-      margin-top: 12px;
       display: block;
-      font-size: 16px;
-    }
-    select, textarea {
-      width: 100%;
-      padding: 12px;
-      border: 1px solid #ccc;
-      border-radius: 8px;
-      margin-top: 6px;
+      margin-top: 12px;
+      font-weight: bold;
+      color: #333;
       font-size: 15px;
+    }
+    select, textarea, input[type="file"] {
+      width: 100%;
+      border: 1px solid #ccc;
+      border-radius: 10px;
+      padding: 10px;
+      margin-top: 5px;
+      font-size: 15px;
+      background: #fafafa;
       box-sizing: border-box;
     }
     textarea {
       resize: none;
-      height: 130px;
-      line-height: 1.6;
+      height: 110px;
+      line-height: 1.5;
     }
-    /* 上传按钮样式（简洁版） */
     input[type="file"] {
-      display: block;
-      width: 100%;
-      border: 1px solid #ccc;
-      padding: 10px;
-      border-radius: 8px;
-      margin-top: 6px;
-      font-size: 15px;
       cursor: pointer;
     }
     input[type="file"]::-webkit-file-upload-button {
       background-color: #007bff;
-      color: white;
+      color: #fff;
       border: none;
-      padding: 8px 16px;
-      border-radius: 6px;
+      padding: 8px 14px;
+      border-radius: 8px;
       cursor: pointer;
-      font-weight: 600;
-      transition: background-color 0.3s;
+      transition: 0.3s;
     }
     input[type="file"]::-webkit-file-upload-button:hover {
       background-color: #0056b3;
     }
     button {
+      margin-top: 18px;
       width: 100%;
-      background-color: #007bff;
-      color: #fff;
+      padding: 13px;
+      background: linear-gradient(90deg, #007bff, #00a2ff);
       border: none;
-      padding: 15px;
-      font-size: 18px;
-      border-radius: 8px;
+      color: white;
+      font-size: 17px;
+      font-weight: bold;
+      border-radius: 10px;
       cursor: pointer;
-      margin-top: 20px;
       transition: all 0.3s;
-      font-weight: 600;
+      box-shadow: 0 3px 10px rgba(0, 123, 255, 0.3);
     }
     button:hover {
-      background-color: #0056b3;
       transform: translateY(-2px);
+      box-shadow: 0 5px 15px rgba(0, 123, 255, 0.4);
+    }
+    footer {
+      margin-top: 20px;
+      text-align: center;
+      color: #666;
+      font-size: 12px;
     }
     @media (max-width: 600px) {
-      h2 { font-size: 26px; }
-      .container { padding: 25px 20px; }
-      select, textarea, input[type="file"], button { font-size: 16px; }
+      .container {
+        padding: 20px 18px;
+      }
+      h2 {
+        font-size: 24px;
+      }
     }
   </style>
 </head>
@@ -126,6 +130,7 @@
 
       <button type="submit">提交匿名意见</button>
     </form>
+    <footer>您的意见将被严格保密，仅用于改进与优化工作。</footer>
   </div>
 
   <script>
@@ -191,3 +196,4 @@
   </script>
 </body>
 </html>
+
