--- a/index.html
+++ b/index.html
@@ -10,37 +10,39 @@
       font-family: 'Microsoft YaHei', Arial, sans-serif;
       margin: 0;
       min-height: 100vh;
-      background: linear-gradient(135deg, #6fa3ef, #b693f9);
+      background: linear-gradient(180deg, #6fa3ef, #a78bfa, #c084fc);
       display: flex;
       justify-content: center;
-      align-items: center;
-      padding: 15px;
+      align-items: flex-start;
+      padding: 30px 15px 40px;
     }
     .container {
-      background: rgba(255, 255, 255, 0.9);
-      backdrop-filter: blur(10px);
-      border-radius: 20px;
-      box-shadow: 0 8px 25px rgba(0, 0, 0, 0.15);
-      padding: 25px 25px 30px;
+      background: rgba(255, 255, 255, 0.95);
+      backdrop-filter: blur(12px);
+      border-radius: 18px;
+      box-shadow: 0 8px 25px rgba(0, 0, 0, 0.12);
+      padding: 20px 25px 25px;
       max-width: 500px;
       width: 100%;
-      animation: fadeIn 0.8s ease;
+      margin-top: 20px;
+      animation: slideUp 0.6s ease-out;
     }
-    @keyframes fadeIn {
-      from {opacity: 0; transform: translateY(15px);}
+    @keyframes slideUp {
+      from {opacity: 0; transform: translateY(25px);}
       to {opacity: 1; transform: translateY(0);}
     }
     h2 {
       text-align: center;
       color: #007bff;
-      margin-bottom: 15px;
-      font-size: 28px;
+      margin-top: 5px;
+      margin-bottom: 18px;
+      font-size: 26px;
       font-weight: 700;
       letter-spacing: 0.5px;
     }
     label {
       display: block;
-      margin-top: 12px;
+      margin-top: 10px;
       font-weight: bold;
       color: #333;
       font-size: 15px;
@@ -50,9 +52,9 @@
       border: 1px solid #ccc;
       border-radius: 10px;
       padding: 10px;
-      margin-top: 5px;
+      margin-top: 6px;
       font-size: 15px;
-      background: #fafafa;
+      background: #f9fafc;
       box-sizing: border-box;
     }
     textarea {
@@ -76,7 +78,7 @@
       background-color: #0056b3;
     }
     button {
-      margin-top: 18px;
+      margin-top: 16px;
       width: 100%;
       padding: 13px;
       background: linear-gradient(90deg, #007bff, #00a2ff);
@@ -94,14 +96,15 @@
       box-shadow: 0 5px 15px rgba(0, 123, 255, 0.4);
     }
     footer {
-      margin-top: 20px;
+      margin-top: 16px;
       text-align: center;
       color: #666;
       font-size: 12px;
     }
     @media (max-width: 600px) {
       .container {
-        padding: 20px 18px;
+        padding: 18px 18px 20px;
+        margin-top: 10px;
       }
       h2 {
         font-size: 24px;
@@ -123,7 +126,7 @@
       </select>
 
       <label for="message">意见内容：</label>
-      <textarea id="message" placeholder="请输入您宝贵的意见及建议，我们会及时进行整改和查证处理" required></textarea>
+      <textarea id="message" placeholder="请输入您宝贵的意见及建议，我们会及时进行整改和核实处理" required></textarea>
 
       <label for="image">上传图片（可选）：</label>
       <input type="file" id="image" accept="image/*">
@@ -196,4 +199,3 @@
   </script>
 </body>
 </html>
-
