--- a/index.html
+++ b/index.html
@@ -10,104 +10,134 @@
       font-family: 'Microsoft YaHei', Arial, sans-serif;
       margin: 0;
       min-height: 100vh;
-      background: linear-gradient(180deg, #6fa3ef, #a78bfa, #c084fc);
+      background: linear-gradient(180deg, #7ba9ff, #a98efc, #c79efc);
       display: flex;
       justify-content: center;
       align-items: flex-start;
-      padding: 30px 15px 40px;
+      padding: 60px 20px;
     }
+
     .container {
       background: rgba(255, 255, 255, 0.95);
-      backdrop-filter: blur(12px);
-      border-radius: 18px;
-      box-shadow: 0 8px 25px rgba(0, 0, 0, 0.12);
-      padding: 20px 25px 25px;
-      max-width: 500px;
+      backdrop-filter: blur(14px);
+      border-radius: 24px;
+      box-shadow: 0 10px 30px rgba(0, 0, 0, 0.12);
+      padding: 40px 35px 45px;
+      max-width: 550px;
       width: 100%;
-      margin-top: 20px;
-      animation: slideUp 0.6s ease-out;
+      animation: fadeIn 0.8s ease-out;
     }
-    @keyframes slideUp {
-      from {opacity: 0; transform: translateY(25px);}
-      to {opacity: 1; transform: translateY(0);}
+
+    @keyframes fadeIn {
+      from { opacity: 0; transform: translateY(20px); }
+      to { opacity: 1; transform: translateY(0); }
     }
+
     h2 {
       text-align: center;
       color: #007bff;
-      margin-top: 5px;
-      margin-bottom: 18px;
-      font-size: 26px;
-      font-weight: 700;
-      letter-spacing: 0.5px;
+      margin-bottom: 30px;
+      font-size: 30px;
+      font-weight: 800;
+      letter-spacing: 1px;
     }
+
     label {
       display: block;
-      margin-top: 10px;
+      margin-top: 18px;
       font-weight: bold;
-      color: #333;
-      font-size: 15px;
+      color: #222;
+      font-size: 18px;
     }
+
     select, textarea, input[type="file"] {
       width: 100%;
       border: 1px solid #ccc;
       border-radius: 10px;
-      padding: 10px;
-      margin-top: 6px;
-      font-size: 15px;
+      padding: 14px;
+      margin-top: 8px;
+      font-size: 16px;
       background: #f9fafc;
       box-sizing: border-box;
     }
+
     textarea {
       resize: none;
-      height: 110px;
-      line-height: 1.5;
+      height: 140px;
+      line-height: 1.6;
     }
+
     input[type="file"] {
       cursor: pointer;
+      font-size: 15px;
     }
+
     input[type="file"]::-webkit-file-upload-button {
       background-color: #007bff;
       color: #fff;
       border: none;
-      padding: 8px 14px;
+      padding: 9px 18px;
       border-radius: 8px;
       cursor: pointer;
       transition: 0.3s;
+      font-size: 15px;
+      font-weight: 600;
     }
+
     input[type="file"]::-webkit-file-upload-button:hover {
       background-color: #0056b3;
     }
+
     button {
-      margin-top: 16px;
+      margin-top: 30px;
       width: 100%;
-      padding: 13px;
+      padding: 16px;
       background: linear-gradient(90deg, #007bff, #00a2ff);
       border: none;
       color: white;
-      font-size: 17px;
-      font-weight: bold;
-      border-radius: 10px;
+      font-size: 18px;
+      font-weight: 700;
+      border-radius: 12px;
       cursor: pointer;
       transition: all 0.3s;
-      box-shadow: 0 3px 10px rgba(0, 123, 255, 0.3);
+      box-shadow: 0 4px 15px rgba(0, 123, 255, 0.3);
     }
+
     button:hover {
-      transform: translateY(-2px);
-      box-shadow: 0 5px 15px rgba(0, 123, 255, 0.4);
+      transform: translateY(-3px);
+      box-shadow: 0 6px 18px rgba(0, 123, 255, 0.4);
     }
+
     footer {
-      margin-top: 16px;
+      margin-top: 25px;
       text-align: center;
-      color: #666;
-      font-size: 12px;
+      color: #555;
+      font-size: 14px;
     }
+
     @media (max-width: 600px) {
-      .container {
-        padding: 18px 18px 20px;
-        margin-top: 10px;
+      body {
+        padding: 40px 15px;
       }
+
+      .container {
+        padding: 30px 22px 35px;
+      }
+
       h2 {
-        font-size: 24px;
+        font-size: 26px;
+      }
+
+      label {
+        font-size: 16px;
+      }
+
+      select, textarea, input[type="file"], button {
+        font-size: 16px;
+      }
+
+      footer {
+        font-size: 13px;
       }
     }
   </style>
@@ -126,7 +156,7 @@
       </select>
 
       <label for="message">意见内容：</label>
-      <textarea id="message" placeholder="请输入您宝贵的意见及建议，我们会及时进行整改和核实处理" required></textarea>
+      <textarea id="message" placeholder="请输入您宝贵的意见及建议，我们会及时进行整改和查证处理" required></textarea>
 
       <label for="image">上传图片（可选）：</label>
       <input type="file" id="image" accept="image/*">
