--- a/index.html
+++ b/index.html
@@ -10,19 +10,19 @@
       font-family: 'Microsoft YaHei', Arial, sans-serif;
       margin: 0;
       min-height: 100vh;
-      background: linear-gradient(180deg, #7ba9ff, #a98efc, #c79efc);
+      background: linear-gradient(180deg, #6faeff, #8c97ff, #b58aff);
       display: flex;
       justify-content: center;
       align-items: flex-start;
-      padding: 60px 20px;
+      padding: 50px 15px 80px;
     }
 
     .container {
       background: rgba(255, 255, 255, 0.95);
-      backdrop-filter: blur(14px);
-      border-radius: 24px;
-      box-shadow: 0 10px 30px rgba(0, 0, 0, 0.12);
-      padding: 40px 35px 45px;
+      backdrop-filter: blur(12px);
+      border-radius: 26px;
+      box-shadow: 0 8px 25px rgba(0, 0, 0, 0.12);
+      padding: 35px 35px 45px;
       max-width: 550px;
       width: 100%;
       animation: fadeIn 0.8s ease-out;
@@ -33,28 +33,52 @@
       to { opacity: 1; transform: translateY(0); }
     }
 
+    /* 顶部 LOGO 区域 */
+    .logo-header {
+      text-align: center;
+      margin-bottom: 25px;
+    }
+    .logo-header img {
+      width: 70px;
+      height: auto;
+      margin-bottom: 8px;
+    }
+    .logo-header h1 {
+      margin: 0;
+      color: #0056b3;
+      font-size: 20px;
+      letter-spacing: 1px;
+      font-weight: 700;
+    }
+    .logo-header p {
+      margin: 2px 0 0;
+      font-size: 13px;
+      color: rgba(0, 0, 0, 0.5);
+      letter-spacing: 0.5px;
+    }
+
     h2 {
       text-align: center;
       color: #007bff;
-      margin-bottom: 30px;
-      font-size: 30px;
+      margin-bottom: 28px;
+      font-size: 26px;
       font-weight: 800;
-      letter-spacing: 1px;
+      letter-spacing: 0.5px;
     }
 
     label {
       display: block;
-      margin-top: 18px;
+      margin-top: 16px;
       font-weight: bold;
       color: #222;
-      font-size: 18px;
+      font-size: 17px;
     }
 
     select, textarea, input[type="file"] {
       width: 100%;
       border: 1px solid #ccc;
       border-radius: 10px;
-      padding: 14px;
+      padding: 13px;
       margin-top: 8px;
       font-size: 16px;
       background: #f9fafc;
@@ -109,42 +133,33 @@
     }
 
     footer {
-      margin-top: 25px;
+      margin-top: 28px;
       text-align: center;
       color: #555;
       font-size: 14px;
     }
 
     @media (max-width: 600px) {
-      body {
-        padding: 40px 15px;
-      }
-
-      .container {
-        padding: 30px 22px 35px;
-      }
-
-      h2 {
-        font-size: 26px;
-      }
-
-      label {
-        font-size: 16px;
-      }
-
-      select, textarea, input[type="file"], button {
-        font-size: 16px;
-      }
-
-      footer {
-        font-size: 13px;
-      }
+      body { padding: 35px 12px; }
+      .container { padding: 25px 20px 35px; }
+      h2 { font-size: 24px; }
+      label { font-size: 16px; }
+      select, textarea, input[type="file"], button { font-size: 16px; }
+      .logo-header img { width: 60px; }
     }
   </style>
 </head>
 <body>
   <div class="container">
+    <!-- LOGO 标题区 -->
+    <div class="logo-header">
+      <img src="logo.png" alt="联信资LOGO">
+      <h1>聯信資</h1>
+      <p>Trust Union Limited</p>
+    </div>
+
     <h2>📧 联信资匿名意见箱 📧</h2>
+
     <form id="feedbackForm">
       <label for="category">意见内容分类：</label>
       <select id="category" required>
@@ -163,6 +178,7 @@
 
       <button type="submit">提交匿名意见</button>
     </form>
+
     <footer>您的意见将被严格保密，仅用于改进与优化工作。</footer>
   </div>
 
@@ -229,3 +245,4 @@
   </script>
 </body>
 </html>
+
