--- a/index.html
+++ b/index.html
@@ -6,26 +6,30 @@
   <title>📧 联信资匿名意见箱 📧</title>
   <script src="https://cdn.jsdelivr.net/npm/emailjs-com@3/dist/email.min.js"></script>
   <style>
-    body {
-      font-family: 'Microsoft YaHei', Arial, sans-serif;
+    html, body {
+      height: 100%;
       margin: 0;
-      min-height: 100vh;
+      font-family: 'Microsoft YaHei', Arial, sans-serif;
+      overflow: hidden; /* 禁止滚动 */
       background: linear-gradient(180deg, #6faeff, #8c97ff, #b58aff);
       display: flex;
       justify-content: center;
-      align-items: flex-start;
-      padding: 50px 15px 80px;
+      align-items: center;
     }
 
     .container {
       background: rgba(255, 255, 255, 0.95);
-      backdrop-filter: blur(12px);
+      backdrop-filter: blur(14px);
       border-radius: 26px;
-      box-shadow: 0 8px 25px rgba(0, 0, 0, 0.12);
+      box-shadow: 0 8px 25px rgba(0, 0, 0, 0.15);
       padding: 35px 35px 45px;
-      max-width: 550px;
-      width: 100%;
+      max-width: 520px;
+      width: 90%;
       animation: fadeIn 0.8s ease-out;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
     }
 
     @keyframes fadeIn {
@@ -33,79 +37,82 @@
       to { opacity: 1; transform: translateY(0); }
     }
 
-    /* 顶部 LOGO 区域 */
     .logo-header {
       text-align: center;
-      margin-bottom: 25px;
+      margin-bottom: 20px;
     }
+
     .logo-header img {
-      width: 70px;
+      width: 80px;
       height: auto;
       margin-bottom: 8px;
     }
+
     .logo-header h1 {
       margin: 0;
       color: #0056b3;
-      font-size: 20px;
+      font-size: 22px;
       letter-spacing: 1px;
       font-weight: 700;
     }
+
     .logo-header p {
       margin: 2px 0 0;
       font-size: 13px;
-      color: rgba(0, 0, 0, 0.5);
-      letter-spacing: 0.5px;
+      color: rgba(0, 0, 0, 0.6);
     }
 
     h2 {
       text-align: center;
       color: #007bff;
-      margin-bottom: 28px;
-      font-size: 26px;
+      margin: 10px 0 25px;
+      font-size: 24px;
       font-weight: 800;
-      letter-spacing: 0.5px;
+    }
+
+    form {
+      width: 100%;
     }
 
     label {
       display: block;
-      margin-top: 16px;
+      margin-top: 14px;
       font-weight: bold;
       color: #222;
-      font-size: 17px;
+      font-size: 16px;
     }
 
     select, textarea, input[type="file"] {
       width: 100%;
       border: 1px solid #ccc;
       border-radius: 10px;
-      padding: 13px;
+      padding: 12px;
       margin-top: 8px;
-      font-size: 16px;
+      font-size: 15px;
       background: #f9fafc;
       box-sizing: border-box;
     }
 
     textarea {
       resize: none;
-      height: 140px;
-      line-height: 1.6;
+      height: 110px;
+      line-height: 1.5;
     }
 
     input[type="file"] {
       cursor: pointer;
-      font-size: 15px;
+      font-size: 14px;
     }
 
     input[type="file"]::-webkit-file-upload-button {
       background-color: #007bff;
       color: #fff;
       border: none;
-      padding: 9px 18px;
+      padding: 8px 16px;
       border-radius: 8px;
       cursor: pointer;
       transition: 0.3s;
-      font-size: 15px;
-      font-weight: 600;
+      font-size: 14px;
     }
 
     input[type="file"]::-webkit-file-upload-button:hover {
@@ -113,39 +120,50 @@
     }
 
     button {
-      margin-top: 30px;
+      margin-top: 25px;
       width: 100%;
-      padding: 16px;
+      padding: 14px;
       background: linear-gradient(90deg, #007bff, #00a2ff);
       border: none;
       color: white;
-      font-size: 18px;
+      font-size: 17px;
       font-weight: 700;
-      border-radius: 12px;
+      border-radius: 10px;
       cursor: pointer;
       transition: all 0.3s;
-      box-shadow: 0 4px 15px rgba(0, 123, 255, 0.3);
+      box-shadow: 0 3px 12px rgba(0, 123, 255, 0.3);
     }
 
     button:hover {
-      transform: translateY(-3px);
-      box-shadow: 0 6px 18px rgba(0, 123, 255, 0.4);
+      transform: translateY(-2px);
+      box-shadow: 0 6px 15px rgba(0, 123, 255, 0.4);
     }
 
     footer {
-      margin-top: 28px;
+      margin-top: 20px;
       text-align: center;
       color: #555;
-      font-size: 14px;
+      font-size: 13px;
     }
 
     @media (max-width: 600px) {
-      body { padding: 35px 12px; }
-      .container { padding: 25px 20px 35px; }
-      h2 { font-size: 24px; }
-      label { font-size: 16px; }
-      select, textarea, input[type="file"], button { font-size: 16px; }
-      .logo-header img { width: 60px; }
+      .container {
+        width: 92%;
+        padding: 28px 20px 35px;
+      }
+      .logo-header img {
+        width: 65px;
+      }
+      h2 {
+        font-size: 22px;
+        margin-bottom: 20px;
+      }
+      label {
+        font-size: 15px;
+      }
+      select, textarea, input[type="file"], button {
+        font-size: 15px;
+      }
     }
   </style>
 </head>
@@ -245,4 +263,5 @@
   </script>
 </body>
 </html>
+
 
