--- a/index.html
+++ b/index.html
@@ -6,25 +6,45 @@
   <title>📧 联信资匿名意见箱 📧</title>
   <script src="https://cdn.jsdelivr.net/npm/emailjs-com@3/dist/email.min.js"></script>
   <style>
+    * {
+      box-sizing: border-box;
+    }
+
+    /* 🌈 固定淡彩虹渐变背景 */
     body {
       font-family: 'Microsoft YaHei', Arial, sans-serif;
       margin: 0;
       min-height: 100vh;
-      background: linear-gradient(180deg, #7ba9ff, #a98efc, #c79efc);
+      background: linear-gradient(135deg, 
+        #f5d6ff 0%, 
+        #d7e3ff 25%, 
+        #d2f8ff 50%, 
+        #fff3d7 75%, 
+        #ffd6e0 100%);
+      background-attachment: fixed; /* 🔒 固定背景 */
+      background-size: 400% 400%;
       display: flex;
       justify-content: center;
-      align-items: flex-start;
-      padding: 60px 20px;
+      align-items: center;
+      animation: gradientMove 12s ease infinite;
     }
 
+    /* 渐变轻微流动效果 */
+    @keyframes gradientMove {
+      0% { background-position: 0% 50%; }
+      50% { background-position: 100% 50%; }
+      100% { background-position: 0% 50%; }
+    }
+
+    /* 主容器卡片 */
     .container {
-      background: rgba(255, 255, 255, 0.95);
+      background: rgba(255, 255, 255, 0.9);
       backdrop-filter: blur(14px);
-      border-radius: 24px;
-      box-shadow: 0 10px 30px rgba(0, 0, 0, 0.12);
+      border-radius: 20px;
+      box-shadow: 0 10px 25px rgba(0, 0, 0, 0.12);
       padding: 40px 35px 45px;
-      max-width: 550px;
-      width: 100%;
+      max-width: 520px;
+      width: 92%;
       animation: fadeIn 0.8s ease-out;
     }
 
@@ -37,17 +57,17 @@
       text-align: center;
       color: #007bff;
       margin-bottom: 30px;
-      font-size: 30px;
+      font-size: 28px;
       font-weight: 800;
       letter-spacing: 1px;
     }
 
     label {
       display: block;
-      margin-top: 18px;
+      margin-top: 16px;
       font-weight: bold;
       color: #222;
-      font-size: 18px;
+      font-size: 17px;
     }
 
     select, textarea, input[type="file"] {
@@ -117,27 +137,27 @@
 
     @media (max-width: 600px) {
       body {
-        padding: 40px 15px;
+        padding: 20px;
       }
 
       .container {
-        padding: 30px 22px 35px;
+        padding: 25px 20px 30px;
       }
 
       h2 {
-        font-size: 26px;
+        font-size: 24px;
       }
 
       label {
-        font-size: 16px;
+        font-size: 15px;
       }
 
       select, textarea, input[type="file"], button {
-        font-size: 16px;
+        font-size: 15px;
       }
 
       footer {
-        font-size: 13px;
+        font-size: 12px;
       }
     }
   </style>
@@ -229,3 +249,4 @@
   </script>
 </body>
 </html>
+
