--- a/index.html
+++ b/index.html
@@ -3,82 +3,89 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>📧 联信资匿名意见箱 📧</title>
+  <title>联信资匿名意见箱</title>
   <script src="https://cdn.jsdelivr.net/npm/emailjs-com@3/dist/email.min.js"></script>
   <style>
+    /* ======= 基础样式 ======= */
     * {
       box-sizing: border-box;
     }
 
-    /* 🌈 固定淡彩虹渐变背景 */
     body {
-      font-family: 'Microsoft YaHei', Arial, sans-serif;
       margin: 0;
-      min-height: 100vh;
-      background: linear-gradient(135deg, 
-        #f5d6ff 0%, 
-        #d7e3ff 25%, 
-        #d2f8ff 50%, 
-        #fff3d7 75%, 
-        #ffd6e0 100%);
-      background-attachment: fixed; /* 🔒 固定背景 */
-      background-size: 400% 400%;
+      font-family: "Microsoft YaHei", "Helvetica Neue", Arial, sans-serif;
+      height: 100vh;
       display: flex;
       justify-content: center;
       align-items: center;
-      animation: gradientMove 12s ease infinite;
+      background: radial-gradient(circle at 30% 30%, #f5f7fa, #dfe3eb);
+      overflow: hidden;
     }
 
-    /* 渐变轻微流动效果 */
-    @keyframes gradientMove {
-      0% { background-position: 0% 50%; }
-      50% { background-position: 100% 50%; }
-      100% { background-position: 0% 50%; }
-    }
-
-    /* 主容器卡片 */
+    /* ======= 容器样式 ======= */
     .container {
-      background: rgba(255, 255, 255, 0.9);
-      backdrop-filter: blur(14px);
-      border-radius: 20px;
-      box-shadow: 0 10px 25px rgba(0, 0, 0, 0.12);
-      padding: 40px 35px 45px;
+      background: #ffffff;
+      border-radius: 16px;
+      padding: 48px 42px;
+      width: 90%;
       max-width: 520px;
-      width: 92%;
+      box-shadow:
+        0 12px 28px rgba(0, 0, 0, 0.08),
+        0 4px 12px rgba(0, 0, 0, 0.04);
       animation: fadeIn 0.8s ease-out;
     }
 
     @keyframes fadeIn {
-      from { opacity: 0; transform: translateY(20px); }
+      from { opacity: 0; transform: translateY(15px); }
       to { opacity: 1; transform: translateY(0); }
     }
 
+    /* ======= 标题区 ======= */
     h2 {
       text-align: center;
-      color: #007bff;
-      margin-bottom: 30px;
       font-size: 28px;
-      font-weight: 800;
-      letter-spacing: 1px;
+      color: #0d47a1;
+      margin-bottom: 35px;
+      letter-spacing: 0.5px;
+      font-weight: 700;
+      position: relative;
     }
 
+    h2::after {
+      content: "";
+      display: block;
+      width: 60px;
+      height: 3px;
+      background: linear-gradient(90deg, #007bff, #00b4ff);
+      margin: 12px auto 0;
+      border-radius: 2px;
+    }
+
+    /* ======= 表单内容 ======= */
     label {
       display: block;
-      margin-top: 16px;
-      font-weight: bold;
-      color: #222;
-      font-size: 17px;
+      margin-top: 18px;
+      font-size: 16px;
+      font-weight: 600;
+      color: #333;
     }
 
     select, textarea, input[type="file"] {
       width: 100%;
-      border: 1px solid #ccc;
+      border: 1px solid #d0d7e2;
       border-radius: 10px;
-      padding: 14px;
+      padding: 13px 14px;
       margin-top: 8px;
-      font-size: 16px;
-      background: #f9fafc;
-      box-sizing: border-box;
+      font-size: 15px;
+      background-color: #fafbfc;
+      transition: all 0.2s ease;
+    }
+
+    select:focus, textarea:focus, input[type="file"]:focus {
+      outline: none;
+      border-color: #007bff;
+      box-shadow: 0 0 6px rgba(0, 123, 255, 0.2);
+      background-color: #fff;
     }
 
     textarea {
@@ -89,79 +96,74 @@
 
     input[type="file"] {
       cursor: pointer;
-      font-size: 15px;
+      font-size: 14px;
     }
 
     input[type="file"]::-webkit-file-upload-button {
       background-color: #007bff;
       color: #fff;
       border: none;
-      padding: 9px 18px;
+      padding: 8px 16px;
       border-radius: 8px;
       cursor: pointer;
-      transition: 0.3s;
-      font-size: 15px;
       font-weight: 600;
+      transition: background 0.3s;
     }
 
     input[type="file"]::-webkit-file-upload-button:hover {
       background-color: #0056b3;
     }
 
+    /* ======= 提交按钮 ======= */
     button {
-      margin-top: 30px;
+      margin-top: 28px;
       width: 100%;
-      padding: 16px;
-      background: linear-gradient(90deg, #007bff, #00a2ff);
-      border: none;
-      color: white;
-      font-size: 18px;
+      padding: 15px;
+      font-size: 17px;
       font-weight: 700;
-      border-radius: 12px;
+      color: #fff;
+      border: none;
+      border-radius: 10px;
+      background: linear-gradient(90deg, #007bff, #0066cc);
       cursor: pointer;
-      transition: all 0.3s;
-      box-shadow: 0 4px 15px rgba(0, 123, 255, 0.3);
+      transition: all 0.3s ease;
+      box-shadow: 0 4px 12px rgba(0, 123, 255, 0.25);
     }
 
     button:hover {
-      transform: translateY(-3px);
-      box-shadow: 0 6px 18px rgba(0, 123, 255, 0.4);
+      background: linear-gradient(90deg, #0059b3, #004c99);
+      transform: translateY(-2px);
+      box-shadow: 0 6px 15px rgba(0, 123, 255, 0.3);
     }
 
+    /* ======= 页脚 ======= */
     footer {
       margin-top: 25px;
       text-align: center;
-      color: #555;
-      font-size: 14px;
+      color: #666;
+      font-size: 13px;
+      border-top: 1px solid #eee;
+      padding-top: 15px;
     }
 
+    /* ======= 响应式 ======= */
     @media (max-width: 600px) {
-      body {
-        padding: 20px;
-      }
-
       .container {
-        padding: 25px 20px 30px;
+        padding: 32px 25px;
       }
-
       h2 {
         font-size: 24px;
       }
-
       label {
         font-size: 15px;
       }
-
       select, textarea, input[type="file"], button {
         font-size: 15px;
-      }
-
-      footer {
-        font-size: 12px;
       }
     }
   </style>
 </head>
+
 <body>
   <div class="container">
     <h2>📧 联信资匿名意见箱 📧</h2>
@@ -183,7 +185,7 @@
 
       <button type="submit">提交匿名意见</button>
     </form>
-    <footer>您的意见将被严格保密，仅用于改进与优化工作。</footer>
+    <footer>© 2025 联信资 | Trust Union Limited</footer>
   </div>
 
   <script>
@@ -249,4 +251,3 @@
   </script>
 </body>
 </html>
-
