--- a/index.html
+++ b/index.html
@@ -6,32 +6,31 @@
   <title>联信资匿名意见箱</title>
   <script src="https://cdn.jsdelivr.net/npm/emailjs-com@3/dist/email.min.js"></script>
   <style>
-    /* ======= 基础样式 ======= */
     * {
       box-sizing: border-box;
     }
 
-    body {
+    html, body {
       margin: 0;
+      height: 100%;
+      overflow: hidden; /* 🚫 禁止滚动 */
       font-family: "Microsoft YaHei", "Helvetica Neue", Arial, sans-serif;
-      height: 100vh;
+      background: radial-gradient(circle at 30% 30%, #f6f8fb, #dfe3eb);
       display: flex;
       justify-content: center;
       align-items: center;
-      background: radial-gradient(circle at 30% 30%, #f5f7fa, #dfe3eb);
-      overflow: hidden;
     }
 
-    /* ======= 容器样式 ======= */
     .container {
       background: #ffffff;
-      border-radius: 16px;
-      padding: 48px 42px;
+      border-radius: 20px;
+      padding: 50px 45px;
       width: 90%;
       max-width: 520px;
       box-shadow:
         0 12px 28px rgba(0, 0, 0, 0.08),
         0 4px 12px rgba(0, 0, 0, 0.04);
+      text-align: center;
       animation: fadeIn 0.8s ease-out;
     }
 
@@ -40,15 +39,12 @@
       to { opacity: 1; transform: translateY(0); }
     }
 
-    /* ======= 标题区 ======= */
     h2 {
-      text-align: center;
       font-size: 28px;
       color: #0d47a1;
-      margin-bottom: 35px;
-      letter-spacing: 0.5px;
       font-weight: 700;
-      position: relative;
+      letter-spacing: 0.5px;
+      margin-bottom: 35px;
     }
 
     h2::after {
@@ -61,9 +57,9 @@
       border-radius: 2px;
     }
 
-    /* ======= 表单内容 ======= */
     label {
       display: block;
+      text-align: left;
       margin-top: 18px;
       font-size: 16px;
       font-weight: 600;
@@ -114,7 +110,6 @@
       background-color: #0056b3;
     }
 
-    /* ======= 提交按钮 ======= */
     button {
       margin-top: 28px;
       width: 100%;
@@ -136,17 +131,15 @@
       box-shadow: 0 6px 15px rgba(0, 123, 255, 0.3);
     }
 
-    /* ======= 页脚 ======= */
     footer {
       margin-top: 25px;
       text-align: center;
-      color: #666;
+      color: #777;
       font-size: 13px;
       border-top: 1px solid #eee;
       padding-top: 15px;
     }
 
-    /* ======= 响应式 ======= */
     @media (max-width: 600px) {
       .container {
         padding: 32px 25px;
@@ -251,4 +244,5 @@
   </script>
 </body>
 </html>
+
 
