--- a/index.html
+++ b/index.html
@@ -6,14 +6,12 @@
   <title>联信资匿名意见箱</title>
   <script src="https://cdn.jsdelivr.net/npm/emailjs-com@3/dist/email.min.js"></script>
   <style>
-    * {
-      box-sizing: border-box;
-    }
+    * { box-sizing: border-box; }
 
     html, body {
       margin: 0;
       height: 100%;
-      overflow: hidden; /* 禁止滚动 */
+      overflow: hidden;
       touch-action: none;
       font-family: "Microsoft YaHei", "Helvetica Neue", Arial, sans-serif;
       background: linear-gradient(135deg, #0a0f1a, #162238, #1f2f4d);
@@ -23,7 +21,6 @@
       color: #fff;
     }
 
-    /* 半透明卡片区域 */
     .container {
       width: 95%;
       max-width: 520px;
@@ -42,10 +39,24 @@
       to { opacity: 1; transform: translateY(0); }
     }
 
-    /* 表头标题 */
+    /* 标题样式 */
+    .title {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      gap: 10px;
+      margin-bottom: 30px;
+    }
+
+    .title svg {
+      width: 28px;
+      height: 28px;
+      fill: white; /* 白色信封 */
+    }
+
     h2 {
-      font-size: 28px;
-      margin-bottom: 35px;
+      font-size: 26px;
+      margin: 0;
       font-weight: 700;
       background: linear-gradient(90deg, #00c3ff, #007bff);
       -webkit-background-clip: text;
@@ -146,20 +157,13 @@
       padding-top: 14px;
     }
 
-    /* 手机适配 */
     @media (max-width: 600px) {
       .container {
         padding: 32px 26px;
         border-radius: 14px;
       }
       h2 {
-        font-size: 24px;
-      }
-      label {
-        font-size: 14px;
-      }
-      select, textarea, input[type="file"], button {
-        font-size: 14px;
+        font-size: 22px;
       }
     }
   </style>
@@ -167,7 +171,13 @@
 
 <body>
   <div class="container">
-    <h2>📧 联信资匿名意见箱 📧</h2>
+    <div class="title">
+      <!-- 白色信封 SVG 图标 -->
+      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M2 4a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h20a2 2 0 0 0 2-2V6a2 2 0 0 0-2-2H2zm0 2h20v.511L12 13 2 6.511V6zm0 2.311L8.803 12.5 2 17.189V8.311zM22 8.311v8.878L15.197 12.5 22 8.311zM3.236 18l6.682-4.786L12 15.875l2.082-1.661L20.764 18H3.236z"/></svg>
+      <h2>联信资匿名意见箱</h2>
+      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M2 4a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h20a2 2 0 0 0 2-2V6a2 2 0 0 0-2-2H2zm0 2h20v.511L12 13 2 6.511V6zm0 2.311L8.803 12.5 2 17.189V8.311zM22 8.311v8.878L15.197 12.5 22 8.311zM3.236 18l6.682-4.786L12 15.875l2.082-1.661L20.764 18H3.236z"/></svg>
+    </div>
+
     <form id="feedbackForm">
       <label for="category">意见内容分类：</label>
       <select id="category" required>
@@ -254,3 +264,4 @@
   </script>
 </body>
 </html>
+
