--- a/index.html
+++ b/index.html
@@ -13,153 +13,157 @@
     html, body {
       margin: 0;
       height: 100%;
-      overflow: hidden; /* 禁止滚动 */
-      touch-action: none;
+      overflow: hidden; /* 🚫 禁止滚动条 */
+      touch-action: none; /* 🚫 禁止触摸滑动 */
       font-family: "Microsoft YaHei", "Helvetica Neue", Arial, sans-serif;
-      background: linear-gradient(135deg, #0a0f1a, #162238, #1f2f4d);
+      background: radial-gradient(circle at 30% 30%, #f6f8fb, #dfe3eb);
       display: flex;
       justify-content: center;
       align-items: center;
-      color: #fff;
+      -webkit-overflow-scrolling: none;
     }
 
-    /* 半透明卡片区域 */
     .container {
-      width: 95%;
+      background: #ffffff;
+      border-radius: 20px;
+      padding: 50px 45px;
+      width: 90%;
       max-width: 520px;
-      background: rgba(255, 255, 255, 0.08);
-      border-radius: 18px;
-      padding: 45px 40px;
-      box-shadow: 0 20px 40px rgba(0, 0, 0, 0.4);
-      backdrop-filter: blur(16px);
-      border: 1px solid rgba(255, 255, 255, 0.15);
+      box-shadow:
+        0 12px 28px rgba(0, 0, 0, 0.08),
+        0 4px 12px rgba(0, 0, 0, 0.04);
       text-align: center;
       animation: fadeIn 0.8s ease-out;
+      max-height: 90vh; /* 防止手机键盘顶起 */
+      overflow: hidden;
     }
 
     @keyframes fadeIn {
-      from { opacity: 0; transform: translateY(20px); }
+      from { opacity: 0; transform: translateY(15px); }
       to { opacity: 1; transform: translateY(0); }
     }
 
-    /* 表头标题 */
     h2 {
-      font-size: 28px;
-      margin-bottom: 35px;
+      font-size: 26px;
+      color: #0d47a1;
       font-weight: 700;
-      background: linear-gradient(90deg, #00c3ff, #007bff);
-      -webkit-background-clip: text;
-      -webkit-text-fill-color: transparent;
       letter-spacing: 0.5px;
+      margin-bottom: 25px;
     }
 
     h2::after {
       content: "";
       display: block;
-      width: 70px;
+      width: 60px;
       height: 3px;
-      background: linear-gradient(90deg, #00bfff, #007bff);
-      margin: 14px auto 0;
-      border-radius: 3px;
+      background: linear-gradient(90deg, #007bff, #00b4ff);
+      margin: 10px auto 0;
+      border-radius: 2px;
     }
 
     label {
       display: block;
       text-align: left;
-      margin-top: 20px;
+      margin-top: 14px;
       font-size: 15px;
       font-weight: 600;
-      color: #cfd7e6;
+      color: #333;
     }
 
     select, textarea, input[type="file"] {
       width: 100%;
-      border: none;
+      border: 1px solid #d0d7e2;
       border-radius: 10px;
-      padding: 14px;
-      margin-top: 8px;
+      padding: 12px 13px;
+      margin-top: 6px;
       font-size: 15px;
-      background: rgba(255, 255, 255, 0.1);
-      color: #fff;
-      outline: none;
-      transition: 0.3s ease;
+      background-color: #fafbfc;
+      transition: all 0.2s ease;
     }
 
-    select:focus, textarea:focus {
-      background: rgba(255, 255, 255, 0.18);
-      box-shadow: 0 0 6px rgba(0, 180, 255, 0.4);
+    select:focus, textarea:focus, input[type="file"]:focus {
+      outline: none;
+      border-color: #007bff;
+      box-shadow: 0 0 6px rgba(0, 123, 255, 0.2);
+      background-color: #fff;
     }
 
     textarea {
       resize: none;
-      height: 130px;
+      height: 120px;
       line-height: 1.6;
     }
 
     input[type="file"] {
       cursor: pointer;
       font-size: 14px;
-      color: #ccc;
     }
 
     input[type="file"]::-webkit-file-upload-button {
-      background: linear-gradient(90deg, #007bff, #00aaff);
+      background-color: #007bff;
       color: #fff;
       border: none;
-      padding: 9px 18px;
+      padding: 8px 16px;
       border-radius: 8px;
       cursor: pointer;
       font-weight: 600;
-      transition: 0.3s;
+      transition: background 0.3s;
     }
 
     input[type="file"]::-webkit-file-upload-button:hover {
-      background: linear-gradient(90deg, #0060cc, #0094ff);
+      background-color: #0056b3;
     }
 
     button {
-      margin-top: 30px;
+      margin-top: 22px;
       width: 100%;
-      padding: 15px;
+      padding: 14px;
       font-size: 16px;
       font-weight: 700;
+      color: #fff;
       border: none;
       border-radius: 10px;
-      color: #fff;
-      background: linear-gradient(90deg, #00b4ff, #007bff);
+      background: linear-gradient(90deg, #007bff, #0066cc);
       cursor: pointer;
       transition: all 0.3s ease;
-      box-shadow: 0 6px 18px rgba(0, 123, 255, 0.3);
+      box-shadow: 0 4px 12px rgba(0, 123, 255, 0.25);
     }
 
     button:hover {
-      background: linear-gradient(90deg, #0090e0, #005ecb);
+      background: linear-gradient(90deg, #0059b3, #004c99);
       transform: translateY(-2px);
+      box-shadow: 0 6px 15px rgba(0, 123, 255, 0.3);
     }
 
     footer {
-      margin-top: 25px;
+      margin-top: 18px;
       text-align: center;
-      color: #aab4c4;
-      font-size: 13px;
-      border-top: 1px solid rgba(255, 255, 255, 0.1);
-      padding-top: 14px;
+      color: #777;
+      font-size: 12px;
+      border-top: 1px solid #eee;
+      padding-top: 10px;
     }
 
-    /* 手机适配 */
     @media (max-width: 600px) {
       .container {
-        padding: 32px 26px;
+        padding: 28px 22px;
         border-radius: 14px;
       }
+
       h2 {
-        font-size: 24px;
+        font-size: 22px;
       }
+
       label {
         font-size: 14px;
       }
+
       select, textarea, input[type="file"], button {
         font-size: 14px;
+      }
+
+      footer {
+        font-size: 11px;
       }
     }
   </style>
@@ -190,7 +194,10 @@
   </div>
 
   <script>
-    document.body.addEventListener('touchmove', e => e.preventDefault(), { passive: false });
+    // 禁止页面滚动（针对移动端触摸）
+    document.body.addEventListener('touchmove', function (e) {
+      e.preventDefault();
+    }, { passive: false });
 
     (function() {
       emailjs.init('Vf3g58_uwsuIfMxCI');
@@ -254,4 +261,5 @@
   </script>
 </body>
 </html>
+
 
